--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,36 +1,16 @@
-name: Render Workflow
-
+name: Trigger Render Deployment
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
-
 jobs:
-  render:
+  main:
+    name: Deploy to Render
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Render scene
-      run: python render.py
-
-    - name: Upload rendered image
-      uses: actions/upload-artifact@v2
-      with:
-        name: render
-        path: rendered.png
+      - name: Trigger deployment
+        uses: sws2apps/render-deployment@main #consider using pin for dependabot auto update
+        with:
+          serviceId: ${{ secrets.RENDER_APP_NAME }}
+          apiKey: ${{ secrets..ML_MODEL_RENDER_API_KEY }}
+          multipleDeployment: false #optional, default true
