--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,59 +1,30 @@
-# Your workflow name.
 name: Deploy to Render
 
-# Run workflow on every push to main branch.
 on:
   push:
-    branches: [main]
+    branches:
+      - main
 
-# Your workflows jobs.
 jobs:
-  build:
+  main:
+    name: Deploy to Render
     runs-on: ubuntu-latest
+
     steps:
-      # Check-out your repository.
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v2
 
-
-### ⬇ IMPORTANT PART ⬇ ###
-
-      - name: Build, Push and Release a Docker container to Render. # Your custom step name
-        uses: sws2apps/render-deployment@main # GitHub action name (leave it as it is).
+      - name: Build Docker image
+        uses: docker/build-push-action@v2
         with:
-          # Below you must provide variables for your render app.
+          push: true
+          tags: render/${{ env.RENDER_APP_NAME }}:${{ env.APP_VERSION }}
 
-          # The email address associated with your render account.
-          # If you don't want to use repository secrets (which is recommended) you can do:
-          # email: my.email@example.com
-          render_email: ${{ secrets.RENDER_EMAIL }}
-          
-          # render API key associated with provided user's email.
-          # Api Key is available under your render account settings.
-          ml_model_render_api_key: ${{ secrets.ML_MODEL_RENDER_API_KEY }}
-          
-          # Name of the render application to which the build is to be sent.
-          render_app_name: ${{ secrets.RENDER_APP_NAME }}
-
-          # (Optional, default: "./")
-          # Dockerfile directory.
-          # For example, if you have a Dockerfile in the root of your project, leave it as follows:
-          dockerfile_directory: ./
-
-          # (Optional, default: "Dockerfile")
-          # Dockerfile name.
-          dockerfile_name: Dockerfile
-
-          # (Optional, default: "")
-          # Additional options of docker build command.
-          docker_options: "--no-cache"
-
-          # (Optional, default: "web")
-          # Select the process type for which you want the docker container to be uploaded.
-          # By default, this argument is set to "web".
-          # For more information look at https://devcenter.heroku.com/articles/process-model
-          process_type: web
-          
-   
-          
-### ⬆ IMPORTANT PART ⬆ ###
+      - name: Deploy to Render
+        uses: sws2apps/render-deployment@main # consider using a pinned version
+        with:
+          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
+          apiKey: ${{ secrets.ML_MODEL_RENDER_API_KEY }}
+          imageName: render/${{ env.RENDER_APP_NAME }}
+          imageTag: ${{ env.APP_VERSION }}
+          # env: ${{ env.ENV_VARIABLES }}
