--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,30 +1,35 @@
-name: Deploy to Render
+name: Render Workflow
 
 on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  main:
-    name: Deploy to Render
+  render:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: render/${{ env.RENDER_APP_NAME }}:${{ env.APP_VERSION }}
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
 
-      - name: Deploy to Render
-        uses: sws2apps/render-deployment@main # consider using a pinned version
-        with:
-          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
-          apiKey: ${{ secrets.ML_MODEL_RENDER_API_KEY }}
-          imageName: render/${{ env.RENDER_APP_NAME }}
-          imageTag: ${{ env.APP_VERSION }}
-          # env: ${{ env.ENV_VARIABLES }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+   # - name: Render scene
+    #  run: python render.py
+
+    - name: Upload rendered image
+      uses: actions/upload-artifact@v2
+      with:
+        name: render
+        path: rendered.png
